force-app/main/default/objects/Zentra_Error_Log__c/Zentra_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Captures all Apex and Flow errors across TruZentra services for debugging and monitoring.</description>
    <label>Zentra Error Log</label>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zentra Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>