force-app/main/default/objects/Zentra_Error_Log__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer account related to the error</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Zentra_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>