force-app/main/default/objects/Zentra_Error_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Method or action where the error occurred</description>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>