force-app/main/default/objects/Zentra_Error_Log__c/fields/Source_Class__c.field-meta.xml
<CustomField>
    <fullName>Source_Class__c</fullName>
    <description>Apex class or Flow name where the error originated</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>