force-app/main/default/objects/Zentra_Error_Log__c/listViews/Zentra_All_Error_Logs.listView-meta.xml
<ListView>
    <fullName>Zentra_All_Error_Logs</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Error Logs</label>
</ListView>